devops-hoodie-v1/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  backend-service-v1
spec:
  selector:
    app:  dummy-backend-v1
  type:  ClusterIP
  ports:
  - name:  http
    protocol: TCP
    port:  80
    targetPort:  5000

---

kind: Service
apiVersion: v1
metadata:
  name:  backend-service-v2
spec:
  selector:
    app:  dummy-backend-v2
  type:  ClusterIP
  ports:
  - name:  http
    protocol: TCP
    port:  80
    targetPort:  5000

---

kind: Service
apiVersion: v1
metadata:
  name:  frontend-service
spec:
  selector:
    app:  dummy-frontend
  type:  NodePort
  ports:
  - name:  http
    protocol: TCP
    port:  80
    targetPort:  3000

---

kind: Service
apiVersion: v1
metadata:
  name:  wordle-service
spec:
  selector:
    app:  wordle-app
  type:  NodePort
  ports:
  - name:  http
    protocol: TCP
    port:  80
    targetPort:  80
