devops-hoodie-v1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-ingress
  annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: wordle-service
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - http:
      paths:
      - path: /backend/v1
        pathType: Prefix
        backend:
          service:
            name: backend-service-v1
            port:
              number: 80
  - http:
      paths:
      - path: /backend/v2
        pathType: Prefix
        backend:
          service:
            name: backend-service-v2
            port:
              number: 80
